spade-tests/src/snapshots/spade_tests__integration__units_can_contain_types_but_they_are_in_a_scope.snap
---
source: spade-tests/src/integration.rs
---
fn test() {
    struct S {}
    enum E {V1{v: S}}
    type A = E;

    let x: A = E::V1(S());
}

struct Y {x: S}


error: Use of undeclared name S
  ┌─ testinput:9:14
  │
9 │ struct Y {x: S}
  │              ^ Undeclared name
